--- a/wireframe.css
+++ b/wireframe.css
@@ -2,59 +2,98 @@ body{
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     color: #777;
     background: #777;
-    width: 960px;
-    font-size: 18px;
+    width:960px;
+    font-size:18px;
     margin:auto;
+    margin-top: 50px;
     }
     .boxh{
       background: #ebebeb;
       text-align:center;
-      margin:10px;
-      padding:35px;
+      width:960px;
+      height:45px;
+      margin-bottom: 5px;
       
     }
     .boxn{
       background: #ebebeb;
       text-align:center;
-      margin:10px;
-      padding:35px;
+      width:960px;
+      height:45px;
+      margin-bottom: 5px;
     }
     .boxc{
       background: #ebebeb;
       height:220px;
-      width:49%;
-      float:right;
-      line-height:7;
+      width:28%;
+      height:150px;
       text-align:center;
+      padding: 80px;
+      border:7px solid blue;
+      padding-top: 50px;
+      float:right;
+      
     }
     .boxs{
       background: #ebebeb;
-      height: 220px;
-      width: 49%;
-      line-height:2;
+      height:150px;
+      width:35%;
+      height:150px;
       text-align:center;
+      float:left;
+      padding: 80px;
+      border:7px solid blue;
+      position:relative;
+      padding-top: 50px;
     }
+
     .boxr{
     color: #ebebeb;
-    background: #777;
+    background:#777;
+    text-align: center;
+    width: 360px;
+    height: 200px;
+padding-top: 5px;
+position: absolute;
+right: 80px;
+left:30px;
+    
     
     }
     
     .boxe{ 
       background: #ebebeb;
       color:#777; 
+      text-align: center;
+      width: 340px;
+      height: 50px;
+      position:relative;
+      margin-top:20px;
+      margin-left: auto;
+      margin-right:auto;
     
+  
     }
     
     .boxp{
-       background: #ebebeb;
+      background: #ebebeb;
       color:#777; 
+      text-align: center;
+      width: 340px;
+      height: 50px;
+      position:relative;
+      margin-top:20px;
+      margin-left: auto;
+      margin-right:auto;
+
       
     }
     
     .boxf{
       background: #ebebeb;
-       text-align:center;
-      margin:20px;
-      padding:10px;
+      text-align:center;
+      width:960px;
+      height:45px;
+      margin-bottom: 5px;
+      clear: both;
     }
